# MABA

./: .gitignore  CMakeLists.txt  MABA-on-PhysX4.1.1.27006925.patch  README.md
resources/: dog3d.txt  humanoid.urdf  snake.txt
resources/motions/: dogcanter.txt  dogpace.txt  dogtrot.txt
src/: api.i
src/actors/: Actor.cpp
src/actors/include/: Actor.h  Actor.i  PrimitiveObjects.h  PrimitiveObjects.i
src/articulation/: Articulation.cpp  ArticulationDescriptionNode.cpp  ArticulationElements.cpp  ArticulationTree.cpp  JsonLoader.cpp  Kinematic.cpp  LinkBody.cpp  UrdfLoader.cpp
src/articulation/include/: Articulation.h  Articulation.i  ArticulationDescriptionNode.h  ArticulationElements.h  ArticulationElements.i  ArticulationTree.h  JsonLoader.h  JsonLoader.i  LinkBody.h  Loader.h  Loader.i  UrdfLoader.h  UrdfLoader.i
src/articulation/spd/: spd_ABA.cpp  spd_Dense.cpp  spd_Sparse.cpp
src/common/: sparseLTL.cpp
src/common/include/: CommonMath.h  IDisposable.h  IDisposable.i  MathInterface.h  MathInterface.i  sparseLTL.h
src/core/: Foundation.cpp  Scene.cpp
src/core/include/: Foundation.h  Foundation.i  Scene.h  Scene.i
src/examples/poseTracking/: poseTracking.cpp
src/examples/snake/: snake.cpp
src/renderer/glut/: GlutCamera.cpp  GlutRenderer.cpp  GlutRendererLowLevel.cpp
src/renderer/glut/include/: GlutCamera.h  GlutRenderer.h  GlutRenderer.i  GlutRendererLowLevel.h
src/renderer/unity/: UnityRenderer.cpp
src/renderer/unity/include/: UnityRenderer.h  UnityRenderer.i
